--- a/Booking.html
+++ b/Booking.html
@@ -17,7 +17,7 @@
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#002147">
 
-  <link rel="stylesheet" href="../CSS/Booking.css" />
+  <link rel="stylesheet" href="CSS/Booking.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -32,7 +32,7 @@
 
   <div class="header-logo">
   <a href="#about-section"></a>
-    <img src="../IMAGE/L-1.png" alt="Mahim Homestay Logo" class="logo-img" />
+    <img src="IMAGE/L-1.png" alt="Mahim Homestay Logo" class="logo-img" />
     </a>
   </div>
 
@@ -47,15 +47,16 @@
       <li><a href="index.html">Home</a></li>
       <li><a href="index.html">About Us</a></li>
 
-      <li><a href="#">Gallery</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
       <li><a href="rooms.html">Rooms</a></li>
       <li><a href="Booking.html">Booking</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="#contact">Contact Us</a></li>
       <div class="sidebar-welcome">
+      </ul>
   Welcome to<br><span>Mahim Homestay <br> Darap West Sikkim</span>
 </div>
 
-    </ul>
+    
     <div class="social-icons">
   <a href="https://facebook.com/yourpage" target="_blank"><i class="fab fa-facebook-f"></i></a>
   <a href="https://instagram.com/yourpage" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -70,12 +71,12 @@
     <div class="arrow left" onclick="prevSlide()">&#10094;</div>
     <div class="arrow right" onclick="nextSlide()">&#10095;</div>
     <div class="slides">
-      <img src="../IMAGE/H-7.jpeg" alt="View from Nahim Homestay">
-      <img src="../IMAGE/H-8.jpeg" alt="Room at Nahim Homestay">
-      <img src="../IMAGE/H-9.jpeg" alt="Garden of Nahim Homestay">
-      <img src="../IMAGE/H-10.jpeg" alt="Garden of Nahim Homestay">
-      <img src="../IMAGE/H-11.jpeg" alt="Garden of Nahim Homestay">
-      <img src="../IMAGE/H-12.jpeg" alt="Garden of Nahim Homestay">
+      <img src="IMAGE/H-7.jpeg" alt="View from Nahim Homestay">
+      <img src="IMAGE/H-8.jpeg" alt="Room at Nahim Homestay">
+      <img src="IMAGE/H-9.jpeg" alt="Garden of Nahim Homestay">
+      <img src="IMAGE/H-10.jpeg" alt="Garden of Nahim Homestay">
+      <img src="IMAGE/H-11.jpeg" alt="Garden of Nahim Homestay">
+      <img src="IMAGE/H-12.jpeg" alt="Garden of Nahim Homestay">
     </div>
   </section>
 
@@ -131,7 +132,7 @@
   </div>
 </footer>
 
-  <script src="../JS/booking.js"></script>
+  <script src="JS/booking.js"></script>
   
   </body>
   </html>
