--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#002147">
 
-  <link rel="stylesheet" href="../CSS/index.css" />
-  <link rel="stylesheet" href="../CSS/modal.css" />  <!-- New CSS for modal -->
+  <link rel="stylesheet" href="CSS/index.css" />
+  <link rel="stylesheet" href="CSS/modal.css" />  <!-- New CSS for modal -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -32,7 +32,7 @@
 
     <div class="header-logo">
       <a href="#about-section">
-        <img src="../IMAGE/L-1.png" alt="Mahim Homestay Logo" class="logo-img" />
+        <img src="IMAGE/L-1.png" alt="Mahim Homestay Logo" class="logo-img" />
       </a>
     </div>
 
@@ -68,12 +68,12 @@
     <div class="arrow left" onclick="prevSlide()">&#10094;</div>
     <div class="arrow right" onclick="nextSlide()">&#10095;</div>
     <div class="slides">
-      <img src="../IMAGE/H-7.jpeg" alt="View from Nahim Homestay" />
-      <img src="../IMAGE/H-8.jpeg" alt="Room at Nahim Homestay" />
-      <img src="../IMAGE/H-9.jpeg" alt="Garden of Nahim Homestay" />
-      <img src="../IMAGE/H-10.jpeg" alt="Garden of Nahim Homestay" />
-      <img src="../IMAGE/H-11.jpeg" alt="Garden of Nahim Homestay" />
-      <img src="../IMAGE/H-12.jpeg" alt="Garden of Nahim Homestay" />
+      <img src="IMAGE/H-7.jpeg" alt="View from Nahim Homestay" />
+      <img src="IMAGE/H-8.jpeg" alt="Room at Nahim Homestay" />
+      <img src="IMAGE/H-9.jpeg" alt="Garden of Nahim Homestay" />
+      <img src="IMAGE/H-10.jpeg" alt="Garden of Nahim Homestay" />
+      <img src="IMAGE/H-11.jpeg" alt="Garden of Nahim Homestay" />
+      <img src="IMAGE/H-12.jpeg" alt="Garden of Nahim Homestay" />
     </div>
   </section>
 
@@ -89,7 +89,7 @@
   <h2 class="about-heading">About Us</h2>
   <div class="about-content">
     <div class="about-image">
-      <img src="../IMAGE/ABOUT US.jpeg" alt="About Nahim Homestay" />
+      <img src="IMAGE/ABOUT US.jpeg" alt="About Nahim Homestay" />
     </div>
     <div class="about-text">
       <h1>Nahim Homestay</h1>
@@ -169,7 +169,7 @@
   </div>
 </footer>
 
-  <script src="../JS/index.js"></script>
-  <script src="../JS/modal.js"></script> <!-- New JS for modal -->
+  <script src="JS/index.js"></script>
+  <script src="JS/modal.js"></script> <!-- New JS for modal -->
 </body>
 </html>
