--- a/rooms.html
+++ b/rooms.html
@@ -17,8 +17,8 @@
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#002147">
 
-  <link rel="stylesheet" href="../CSS/rooms.css" />
-  <link rel="stylesheet" href="../CSS/modal.css" />
+  <link rel="stylesheet" href="CSS/rooms.css" />
+  <link rel="stylesheet" href="CSS/modal.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -33,7 +33,7 @@
 
   <div class="header-logo">
     <a href="#about-section">
-  <img src="../IMAGE/L-1.png" alt="Mahim Homestay Logo" class="logo-img" />
+  <img src="IMAGE/L-1.png" alt="Mahim Homestay Logo" class="logo-img" />
    </a>
   </div>
     <button id="openBookingBtn" class="book-now-btn">Book Now</button>
@@ -50,7 +50,7 @@
       <li><a href="index.html">About Us</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="Booking.html">Booking</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="#contact">Contact Us</a></li>
       <div class="sidebar-welcome">
          </ul>
  
@@ -72,12 +72,12 @@
     <div class="arrow left" onclick="prevSlide()">&#10094;</div>
     <div class="arrow right" onclick="nextSlide()">&#10095;</div>
     <div class="slides">
-      <img src="../IMAGE/H-7.jpeg" alt="View from Nahim Homestay">
-      <img src="../IMAGE/H-8.jpeg" alt="Room at Nahim Homestay">
-      <img src="../IMAGE/H-9.jpeg" alt="Garden of Nahim Homestay">
-      <img src="../IMAGE/H-10.jpeg" alt="Garden of Nahim Homestay">
-      <img src="../IMAGE/H-11.jpeg" alt="Garden of Nahim Homestay">
-      <img src="../IMAGE/H-12.jpeg" alt="Garden of Nahim Homestay">
+      <img src="IMAGE/H-7.jpeg" alt="View from Nahim Homestay">
+      <img src="IMAGE/H-8.jpeg" alt="Room at Nahim Homestay">
+      <img src="IMAGE/H-9.jpeg" alt="Garden of Nahim Homestay">
+      <img src="IMAGE/H-10.jpeg" alt="Garden of Nahim Homestay">
+      <img src="IMAGE/H-11.jpeg" alt="Garden of Nahim Homestay">
+      <img src="IMAGE/H-12.jpeg" alt="Garden of Nahim Homestay">
     </div>
   </section>
 
@@ -125,7 +125,7 @@
 
       <div class="room-content image-first">
         <div class="room-img">
-          <img src="../IMAGE/H-12.jpeg" alt="Wooden Room View 1">
+          <img src="IMAGE/H-12.jpeg" alt="Wooden Room View 1">
         </div>
         <div class="room-text animate">Spacious wooden interiors with a cozy double bed perfect for relaxing after a day of exploration. Surrounded by scenic views.</div>
       </div>
@@ -133,13 +133,13 @@
       <div class="room-content image-second">
         <div class="room-text animate">Enjoy our authentic Sikkimese vegetarian cuisine made from organic ingredients served right from our traditional kitchen.</div>
         <div class="room-img">
-          <img src="../IMAGE/H-11.jpeg" alt="Wooden Room View 2">
+          <img src="IMAGE/H-11.jpeg" alt="Wooden Room View 2">
         </div>
       </div>
 
       <div class="room-content image-third">
         <div class="room-img">
-          <img src="../IMAGE/H-11.jpeg" alt="Wooden Room View 3">
+          <img src="IMAGE/H-11.jpeg" alt="Wooden Room View 3">
         </div>
         <div class="room-text animate">
           <strong>Pricing:</strong><br>
@@ -172,13 +172,13 @@
       <div class="room-content image-second">
         <div class="room-text animate">Served with homemade vegetarian delights, our cottage guests enjoy peaceful meals with views of nature.</div>
         <div class="room-img">
-          <img src="../IMAGE/H-10.jpeg" alt="Cottage Room View 2">
+          <img src="IMAGE/H-10.jpeg" alt="Cottage Room View 2">
         </div>
       </div>
 
       <div class="room-content image-third">
         <div class="room-img">
-          <img src="../IMAGE/ABOUT US.jpeg" alt="Cottage Room View 3">
+          <img src="IMAGE/ABOUT US.jpeg" alt="Cottage Room View 3">
         </div>
         <div class="room-text animate">
           <strong>Pricing:</strong><br>
@@ -213,7 +213,7 @@
   </div>
 </footer>
 
-  <script src="../JS/rooms.js"></script>
-  <script src="../JS/modal.js"></script>
+  <script src="JS/rooms.js"></script>
+  <script src="JS/modal.js"></script>
 </body>
 </html>
