--- a/gallery.html
+++ b/gallery.html
@@ -17,9 +17,9 @@
   <meta property="og:type" content="website">
   <meta name="theme-color" content="#002147">
 
-  <link rel="stylesheet" href="../CSS/index.css" />
-  <link rel="stylesheet" href="../CSS/modal.css" />
-  <link rel="stylesheet" href="../CSS/gallery.css" />
+  <link rel="stylesheet" href="CSS/index.css" />
+  <link rel="stylesheet" href="CSS/modal.css" />
+  <link rel="stylesheet" href="CSS/gallery.css" />
   
   <!-- New CSS for modal -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -35,7 +35,7 @@
 
     <div class="header-logo">
       <a href="#about-section">
-        <img src="../IMAGE/L-1.png" alt="Mahim Homestay Logo" class="logo-img" />
+        <img src="IMAGE/L-1.png" alt="Mahim Homestay Logo" class="logo-img" />
       </a>
     </div>
 
@@ -68,12 +68,12 @@
     <div class="arrow left" onclick="prevSlide()">&#10094;</div>
     <div class="arrow right" onclick="nextSlide()">&#10095;</div>
     <div class="slides">
-      <img src="../IMAGE/H-7.jpeg" alt="View from Nahim Homestay" />
-      <img src="../IMAGE/H-8.jpeg" alt="Room at Nahim Homestay" />
-      <img src="../IMAGE/H-9.jpeg" alt="Garden of Nahim Homestay" />
-      <img src="../IMAGE/H-10.jpeg" alt="Garden of Nahim Homestay" />
-      <img src="../IMAGE/H-11.jpeg" alt="Garden of Nahim Homestay" />
-      <img src="../IMAGE/H-12.jpeg" alt="Garden of Nahim Homestay" />
+      <img src="IMAGE/H-7.jpeg" alt="View from Nahim Homestay" />
+      <img src="IMAGE/H-8.jpeg" alt="Room at Nahim Homestay" />
+      <img src="IMAGE/H-9.jpeg" alt="Garden of Nahim Homestay" />
+      <img src="IMAGE/H-10.jpeg" alt="Garden of Nahim Homestay" />
+      <img src="IMAGE/H-11.jpeg" alt="Garden of Nahim Homestay" />
+      <img src="IMAGE/H-12.jpeg" alt="Garden of Nahim Homestay" />
     </div>
   </section>
 
@@ -136,7 +136,7 @@
 </footer>
 
 
-  <script src="../JS/gallery.js"></script>
-  <script src="../JS/modal.js"></script>
+  <script src="JS/gallery.js"></script>
+  <script src="JS/modal.js"></script>
 </body>
 </html>
